# saltext-moosefs

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
docs/: all.rst  conf.py  index.rst
src/saltext/salt_moosefs/: loader.py
src/saltext/salt_moosefs/modules/: salt_moosefs_mod.py
tests/: conftest.py
tests/integration/modules/: test_salt_moosefs.py
tests/unit/modules/: test_salt_moosefs.py
