[metadata]
name = saltext.salt-moosefs
description = Module for gathering and managing information about MooseFS
long_description = file: README.md
long_description_content_type = text/markdown
author = Salt Project
author_email = salt@vmware.com
keywords = salt-extension
url = http://github.com/salt-extensions/salt-ext-moosefs/
project_urls =
    Source=http://github.com/salt-extensions/salt-ext-moosefs/
    Tracker=http://github.com/salt-extensions/salt-ext-moosefs/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
install_requires =
  salt>=3003
  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

# When targetting Salt < 3003, you can remove the other 'options.entry_points' section and use this one
#[options.entry_points]
#salt.loader=
#
#  module_dirs = saltext.salt_moosefs.loader:get_module_dirs
#

[options.entry_points]
salt.loader=
  saltext.salt-moosefs = saltext.salt_moosefs


[options.extras_require]
tests =
  pytest==6.2.4
  pytest-salt-factories==0.911.0
  jinja2<3.1
dev =
  nox
  pre-commit==2.13.0
  pylint
  SaltPyLint
docs =
  sphinx>=3.5.1
  jinja2<3.1
  furo
  sphinx-copybutton
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
docsauto =
  sphinx-autobuild

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
